# KnowYourKnowledge

./: .gitignore  LICENSE  README.md  docs.md
docs/: Architecture.md
docs/cpp-doxygen/html/: _command_line_processor_8cpp.html  _command_line_processor_8h.html  _command_line_processor_8h_source.html  _command_line_processor_constants_8h.html  _command_line_processor_constants_8h_source.html  _config_8cpp.html  _config_8h.html  _config_8h_source.html  _directory_8cpp.html  _directory_8h.html  _directory_8h_source.html  _directory__test_8cpp.html  _file_8cpp.html  _file_8h.html  _file_8h_source.html  _file_builder_8cpp.html  _file_builder_8h.html  (+283 more)
docs/uml/: KnowYourKnowledge.vpp
resources/: text.txt
src/cpp/: CMakeLists.txt  CommandLineProcessor.cpp  CommandLineProcessor.h  CommandLineProcessorConstants.h  Config.cpp  Config.h  Directory.cpp  Directory.h  Directory_test.cpp  FileBuilder.cpp  FileBuilder.h  KnowledgeItem.cpp  KnowledgeItem.h  MatchResult.h  SearchCriteria.h  StreamStorageLoader.h  StreamStorageLoader_test.cpp  TextNote.cpp  TextNote.h  TextNoteCollection.cpp  TextNoteCollection.h  main.cpp  storage.h  storage_base.h  storage_test.cpp  time_helper.cpp  time_helper.h  time_helper_test.cpp
src/cpp/FilesInformation/: File.cpp  File.h
src/cpp/FilesInformation/Loaders/: FilesByNameLoader.cpp  FilesByNameLoader.h  FilesLoader.cpp  FilesLoader.h
src/cpp/FilesInformation/Loaders/EncodingDetector/: text_encoding_detect.cpp  text_encoding_detect.h
src/docs/: Architecture.md
src/ts/: jest.config.js  package-lock.json  package.json  tsconfig.json
(+136 files in other folders)
